{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 757,
  "lineage": "c7c942b5-1cd3-11ca-e3fd-1311ce575ef5",
  "resources": [
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_eip",
      "name": "minion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_eip",
      "name": "salt_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "salt_minion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "salt-iac_salt_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:661914586042:security-group/sg-0d43e6a81dbbe09b1",
            "description": "Security group for salt server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d43e6a81dbbe09b1",
            "ingress": [
              {
                "cidr_blocks": [
                  "204.210.147.186/32"
                ],
                "description": "Allow SSH from my computer",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow all TCP from my computer",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Allow incoming ICMP",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": true,
                "to_port": -1
              }
            ],
            "name": "salt-iac_salt_sg",
            "name_prefix": "",
            "owner_id": "661914586042",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "salt-iac_salt_sg"
            },
            "tags_all": {
              "Name": "salt-iac_salt_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fcbe75f92d1a5fe9"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ingress"
              }
            ]
          ],
          "dependencies": [
            "module.vpc.aws_vpc.salt-iac_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "salt-iac_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:661914586042:internet-gateway/igw-0d701d5ae78de28c2",
            "id": "igw-0d701d5ae78de28c2",
            "owner_id": "661914586042",
            "tags": {
              "Name": "salt-iac_igw"
            },
            "tags_all": {
              "Name": "salt-iac_igw"
            },
            "vpc_id": "vpc-0fcbe75f92d1a5fe9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.salt-iac_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "salt-iac_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:661914586042:route-table/rtb-09a4d671f6dac00a7",
            "id": "rtb-09a4d671f6dac00a7",
            "owner_id": "661914586042",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d701d5ae78de28c2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fcbe75f92d1a5fe9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.salt-iac_igw",
            "module.vpc.aws_vpc.salt-iac_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ed551acb00c3acf",
            "route_table_id": "rtb-09a4d671f6dac00a7",
            "subnet_id": "subnet-0b96b1ad65d10e0ac"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.salt-iac_igw",
            "module.vpc.aws_route_table.salt-iac_public_rt",
            "module.vpc.aws_subnet.salt-iac_public_subnet",
            "module.vpc.aws_vpc.salt-iac_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "salt-iac_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:661914586042:subnet/subnet-0b96b1ad65d10e0ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b96b1ad65d10e0ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "661914586042",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "salt-iac_public_subnet_1"
            },
            "tags_all": {
              "Name": "salt-iac_public_subnet_1"
            },
            "vpc_id": "vpc-0fcbe75f92d1a5fe9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.salt-iac_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "salt-iac_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:661914586042:vpc/vpc-0fcbe75f92d1a5fe9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-004268abe9b1d82ec",
            "default_route_table_id": "rtb-03a60080fa18f39cb",
            "default_security_group_id": "sg-05b2f2af7c067d7fc",
            "dhcp_options_id": "dopt-03e5bd14a38afe70b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0fcbe75f92d1a5fe9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03a60080fa18f39cb",
            "owner_id": "661914586042",
            "tags": {
              "Name": "salt-iac_vpc"
            },
            "tags_all": {
              "Name": "salt-iac_vpc"
            }
          }
        }
      ]
    }
  ]
}